<resources>
    <string name="app_name">My Application</string>
    <string name="default_text">default_text</string>
    <string name="submit">submit</string>
    <string name="default_content_desc">default_content_desc</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_big_card">BigCardActivity</string>
    <string name="adeptus_mechanicus">Adeptus Mechanicus</string>
    <string name="necrons">Necrons</string>
    <string name="factions">Factions</string>
    <string name="title_activity_mission_meter">MissionMeter</string>
    <string name="turn_one_name">Ход 1</string>
    <string name="my_army_name">Я</string>
    <string name="opponent_army_name">Противник</string>
    <string name="turn_two_name">Ход 2</string>
    <string name="turn_three_name">Ход 3</string>
    <string name="turn_four_name">Ход 4</string>
    <string name="turn_five_name">Ход 5</string>
    <string name="victory_points_name">Победные очки</string>
    <string name="first_blood_name">Первая кровь</string>
    <string name="warlord_kill_name">Убийство полководца</string>
    <string name="behind_enemy_lines_name">За рядами врага</string>
    <string name="default_vp">0</string>
    <string name="turn_seven_name">Ход 7</string>
    <string name="turn_six_name">Ход 6</string>
    <string name="victory_points_tracker">Victory points tracker</string>
    <string name="result_name">Результат</string>
</resources>
