<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/factions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_necrons"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/necrons" />
                <item
                    android:id="@+id/nav_admechs"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/adeptus_mechanicus" />
            </group>
        </menu>
    </item>

    <item android:title="Utility">
        <menu>
            <item
                android:id="@+id/nav_vp_tracker"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/victory_points_tracker" />
        </menu>
    </item>

</menu>
