<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activities.MissionMeterActivity"
    tools:showIn="@layout/activity_mission_meter"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/victory_points_name"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_my_army_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_army_name"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/tv_opponent_army_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opponent_army_name"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
            </LinearLayout>

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/rv_sec_missions"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:clipToPadding="false"/>-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_mission_meter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"/>
        </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>